Fixed Chrome horizontal scrolling with proper footer padding

--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -186,7 +186,6 @@ body {
 
 footer {
   margin: 0em;
-  /*width: 100%; */
   padding: 2em 0.8em;
 }
 
@@ -219,12 +218,15 @@ footer ul li a {
 
 footer img {
   width: 250px;
+  margin-bottom: 0em;
+  padding-bottom: 0em;
 }
 
 footer p {
   font-size: 90%;
-  margin-top: 0em;
+  margin-top: -0.5em;
   padding-top: 0em;
+  padding-left: 0.3em;
 }
 
 .footer-right {
@@ -304,8 +306,9 @@ address {
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
+/* remove old breakpoints and intergrate to new  */
+/*
 @media (min-width: 40em) {
-  /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 1.25rem;
     font-size: 1.25rem;
@@ -328,6 +331,7 @@ and (-webkit-device-pixel-ratio : 3) {
     margin-right: 1.5em;
   }
 }
+ */
 
 /* desktop styles go here */
 @media only screen
@@ -382,9 +386,10 @@ and (min-width: 850px) {
   .form-submit {
     width: 50%;
   }
-  footer .row {
-    /*padding: 0em 2em;*/
+  footer {
+    padding: 2em 1em 0.5em;
   }
+
   footer .col-sm-4 {
     padding-left: 0em;
   }
